--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,400;6..12,500;6..12,600;6..12,700;6..12,800&display=swap');
+@import url(' https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,400;6..12,500;6..12,600&display=swap');
 
 /*-----------Basic Reset---------------*/
 
@@ -23,37 +23,32 @@
 
 a {
     text-decoration: none;
-    color: #f0f8ff;
+    color: #e0e4e8;
     transition: all 0.25s ease-in-out;
-}
-
-a:hover {
-    color: #3d9eff;
 }
 
 li {
     list-style: none;
-    padding: 0 10px;
+    padding: 10px;
 }
 
 body {
-    font-family: "Nunito Sans";
+    font-family: "Nunito Sans" , "Open sans" , sans-serif;
     background-color: #14161d;
     font-weight: 500;
-    
 }
 
 header {
     background-color: #20222a;
-    height: 60px;
+    height: 62px;
 }
 
 .header-content {
-    height: 100%;
-    display: flex;
     justify-content: space-between;
     align-items: center;
-    color: #f0f8ff;
+    height: 100%;
+    display: flex;
+    color: #e1e7ec;
 }
 
 h1 {
@@ -63,28 +58,30 @@ h1 {
     font-weight: 600;
 }
 
-.links {
+.navbar {
     width: 70%;
 }
 
-.flex {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.profile-img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    overflow: hidden;
-}
-
-.profile-img img {
+.profile img {
     cursor: pointer;
 }
 
-.input {
+.nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+}
+
+.profile{
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    overflow:hidden;
+   
+}
+
+.postBox {
     display: flex;
     justify-content: center;
     height: 100%;
@@ -92,111 +89,109 @@ h1 {
 
 .input-box {
     background-color: #20222a;
+    height: 300px;
+    padding: 8px;
     margin-top: 40px;
     display: flex;
-    align-items: baseline;
     flex-direction: column;
-    border-radius: 5px;
+    border-radius: 6px;
     width: 600px;
-    height: 300px;
-    padding: 10px;
 }
 
 .input-box textarea {
     background-color: #20222a;
+    resize: none;
     color: #f0f8ff;
     width: 100%;
-    resize: none;
 }
 
-.add-media-button {
-    display: flex;
-    width: 100%;
-    height: 100%;
-}
-
-.add-media {
-    width: 80%;
-    display: flex;
-    align-items: end;
-    position: relative;
-}
-
-.add-media i {
-    margin-bottom: 10px;
-    cursor: pointer;
-    z-index: 1;
-}
-
-.add-media p {
-    color: #90969d;
-    font-size: 12px;
-    margin-left: 5px;
-    display: flex;
-}
-
-.add-media input {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    cursor: pointer;
-    z-index: 2;
-}
-
-.v-button {
+.post-button {
     display: flex;
     align-items: end;
     height: 100%;
     width: 20%;
 }
 
-.button {
-    background-color: #3d9eff;
-    cursor: pointer;
-    border-radius: 3px;
-    height: 35px;
+.add-post-button {
+    display: flex;
     width: 100%;
+    height: 100%;
+}
+ 
+.add-post p {
+    color: #90969d;
+    font-size: 14px;
+    margin-left: 9px;
+    display: block;
+    width: 100%;
+}
+
+.add-post {
+    display: flex;
+    align-items: end;
+    width: 8dvb; 
+    position: relative;
+}
+
+.add-post i {
+    margin-bottom: 10px;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.add-post input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+}
+
+.button {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #358de5;
+    cursor: pointer;
+    border-radius: 5px;
+    height: 36px;
+    width: 100%;
     transition: all 0.25s ease-in-out;
+   position: relative;
+   left: 400px;
 }
 
-.button:hover {
-    background-color: #0281ff;
+.post {
+    color: #000;
+    border-radius: 4px;
+    width: 600px;
+    margin-bottom: 25px;
+    background-color: #f0f8ff;
+    padding: 8px;
+    height: auto;
 }
 
-.new-posts {
+.post-top {
+    display: flex;
+}
+
+.posts-section {
     margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.post {
-    background-color: #f0f8ff;
-    padding: 10px;
-    border-radius: 5px;
-    width: 600px;
-    height: auto;
-    color: #000;
-    margin-bottom: 20px;
-}
-
-.post-header {
-    display: flex;
-}
-
-.post-header img {
-    width: 36px;
-    height: 36px;
+.post-top img {
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
 }
 
-.post-image {
+.post-pic {
     max-width: 100%;
     height: auto;
     border-radius: 5px;
@@ -211,13 +206,13 @@ h1 {
 
 .current-date {
     font-size: 14px;
-    color: #6b6b6b;
+    color: rgb(107, 107, 107);
     display: flex;
     align-items: center;
 }
 
 .post-content p {
-    margin: 20px 0 5px 0;
+   margin: 20px 0 5px 0;
 }
 
 .modal {
@@ -228,25 +223,24 @@ h1 {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: #00000033;
+}
+
+.model-img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
 }
 
 .modal-content {
+    border-radius: 5px;
     position: absolute;
     top: 7%;
     left: 77%;
     background-color: #f0f8ff;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    padding: 21px;
 }
 
 .modal-content p {
-    margin: 5px 0;
-}
-
-.model-img {
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
+    margin: 6px 0;
 }
